# testing-tensor

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  cabal.project.ci  testing-tensor.cabal
.github/: pull_request_template.md
.github/workflows/: haskell-ci.yml
src/Test/: Tensor.hs
src/Test/Tensor/: TestValue.hs
test/: Main.hs
test-cbits/: test-cudnn.c  test-cudnn.h
test/TestSuite/Test/: Convolution.hs  QuickCheck.hs  StdOps.hs
test/TestSuite/Test/Convolution/: CUDNN.hs  Examples3B1B.hs  FFT.hs
test/TestSuite/Util/: TestKernel.hs  TestValue.hs
